--- a/style.css
+++ b/style.css
@@ -732,7 +732,7 @@ body {
   text-align: center;
   font-size: 16px;
   font-family: "Electrolize", sans-serif;
-  color: #ffbf6a;
+  color: #6ae9ff;
   font-weight: 600;
   margin-top: 20px;
   animation: bounceGlow 2s infinite;
