--- a/style.css
+++ b/style.css
@@ -1330,11 +1330,13 @@ img, video {
 ========================= */
 @media (max-width: 480px) {
   .footer-line {
-    font-size: 8px;
+    font-size: 11px;
   }
 
   .flag-icon {
-    width: 13px;
-    top: -0.5px;
+    width: 16px;
+    top: -0.2px;
+    left: -6px;
   }
 }
+
